7333
I get, with 2.9 or trunk:
{noformat}
scalac ./a.scala 
./a.scala:12: error: type mismatch;
 found   : [T](z: String)Base[T] <and> (a: Int)Base[T]
 required: Int
  def test[T]: Int = Foo[T]
                        ^
one error found
{noformat}
What do you see?
